2012-09-05  Sami Kyostila  <skyostil@chromium.org>

        [chromium] Wire up scrollable sublayers in ScrollingCoordinatorChromium
        https://bugs.webkit.org/show_bug.cgi?id=95679

        Reviewed by James Robinson.

        Introduce WebLayerScrollClient for getting notified about scroll events targeting a WebLayer.

        * src/WebLayerImpl.cpp:
        (WebKit::WebLayerImpl::setMaxScrollPosition):
        (WebKit):
        (WebKit::WebLayerImpl::setScrollClient):
        (WebKit::WebLayerImpl::scrollBy):
        * src/WebLayerImpl.h:
        (WebLayerImpl):
        * tests/CCLayerTreeHostTest.cpp:
        * tests/GraphicsLayerChromiumTest.cpp:
        (MockScrollableArea):
        (WebKit):
        (WebKit::TEST_F):
        * tests/WebLayerTest.cpp:

2012-09-05  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: NMI: extract MemoryObjectType constants from MemoryInstrumentation.
        https://bugs.webkit.org/show_bug.cgi?id=95850

        Reviewed by Yury Semikhatsky.

        I'd like to extract MemoryObjectTypes into separate classes.
        After that we will be able to move core NMI instrumentation code to WTF.

        * tests/MemoryInstrumentationTest.cpp:
        (WebCore::Instrumented::reportMemoryUsage):
        (WebCore::InstrumentedRefPtr::reportMemoryUsage):
        (WebCore::InstrumentedWithOwnPtr::reportMemoryUsage):
        (WebCore::InstrumentedOther::reportMemoryUsage):
        (WebCore::InstrumentedDOM::reportMemoryUsage):
        (WebCore::TEST):
        (WebCore::NonVirtualInstrumented::reportMemoryUsage):

2012-09-05  Peter Beverloo  <peter@chromium.org>

        Unreviewed, rolling out r127590.
        http://trac.webkit.org/changeset/127590

        Broke the Chromium bots because of a compile error in the compositor.

        * DEPS:

2012-09-05  Peter Beverloo  <peter@chromium.org>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-09-04  Ilya Tikhonovsky  <loislo@chromium.org>
